Massively simplify the implementation